[package]
name = "portkill"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI to find and kill the process using a given port"
license = "MIT"
repository = "https://github.com/ChimdumebiNebolisa/Portkill"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]

[[bin]]
name = "portkill"
path = "src/main.rs"
